numero casuale console .log

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <main id="app_main ">
       <div class="container-main text-center pt-5 pb-5">
          <!--cell -->
+         <div id="mio-elemento"></div>
       </div>
     </main>
     <!---MAIN--->
