--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <b>Levels</b> 
               </button>
               <ul id="difficulty" class="dropdown-menu ">
-                <li><a class="dropdown-item" value="1" href="#">Hard Level</a></li>
+                <!-- <li><a class="dropdown-item" value="1" href="#">Hard Level</a></li> -->
                 <li><a class="dropdown-item" value="2" href="#">Medium Level </a></li>
-                <li><a class="dropdown-item" value="3" href="#">Easy Level</a></li>
+                <!-- <li><a class="dropdown-item" value="3" href="#">Easy Level</a></li> -->
               </ul>
             </div><!--  scelta button -->
             <div class="play text-center mt-4">
